--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
     <h2>Contact Us</h2>
     <p>Ready to get started? Have a question? Fill out the form below and we’ll get back to you as soon as possible.</p>
     <p><strong>Note:</strong> You don’t need to have everything figured out before reaching out. We’ll guide you through the next steps and gather details together.</p>
-    <form action="mailto:mozingoux@gmail.com" method="POST" enctype="text/plain">
+    <form action="https://formsubmit.co/mozingoux@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
