--- a/index.html
+++ b/index.html
@@ -118,48 +118,46 @@
 
   <section class="section" id="start">
     <h2>New to Websites? Start Here</h2>
-    <p>Getting your first website can feel overwhelming — but we make it easy.</p>
-    <p>Whether you're just starting a business or updating your online presence, Mozingo UX walks you through every step. You don’t need to know anything about hosting, domains, or tech stuff — that’s what we’re here for.</p>
+    <p>Getting your first website can feel overwhelming, but we make it easy.</p>
+    <p>Whether you're just starting a business or updating your online presence, Mozingo UX walks you through every step. You don’t need to know anything about hosting, domains, or tech stuff - that’s what we’re here for.</p>
 
     <h3>Here’s How It Works</h3>
     <ul class="steps">
-      <li><strong>1. We Help You Buy a Domain:</strong> Your domain is your website’s address (like yourbusiness.com). We’ll help you choose and register it — and it’s yours, fully owned.</li>
+      <li><strong>1. We Help You Buy a Domain:</strong> Your domain is your website’s address (like yourbusiness.com). We’ll help you choose and register it, then it’s yours, fully owned.</li>
       <li><strong>2. We Set Up Hosting:</strong> Hosting stores your website online. We help you select a trusted provider and handle the setup for you.</li>
       <li><strong>3. You Stay in Control:</strong> Everything is registered in your name and email. You keep all ownership and access.</li>
       <li><strong>4. We Design & Build:</strong> We start the design process once setup is complete, with your input along the way.</li>
-      <li><strong>5. We Launch & Handoff:</strong> We launch the site and give you all login credentials — you’re in full control of your online presence.</li>
+      <li><strong>5. We Launch & Handoff:</strong> We launch the site and give you all login credentials. You’re in full control from there.</li>
     </ul>
 
     <h3>Why This Matters</h3>
     <p>Too many businesses lose access to their sites because someone else set it up and kept control. At Mozingo UX, we make sure <strong>you always stay in control</strong>. We just help you get there.</p>
 
     <h3>Still Unsure? Let’s Chat.</h3>
-    <p>Have questions? Contact us anytime — we’ll explain everything in plain English.</p>
+    <p>Have questions? Contact us anytime. We'll do our best to answer them.</p>
   </section>
 
   <section class="section" id="work">
     <h2>Work With Us</h2>
-    <p>At Mozingo UX, we bring your vision to life with <strong>modern, responsive websites</strong> that look stunning on desktop, tablet, and mobile. Whether you're starting from scratch or refreshing an outdated site, we deliver clean, professional results — fast.</p>
+    <p>At Mozingo UX, we bring your vision to life with <strong>modern, responsive websites</strong> that look stunning on desktop, tablet, and mobile. Whether you're starting from scratch or refreshing an outdated site, we deliver clean, professional results - fast.</p>
 
     <h3>What You’ll Get</h3>
     <ul class="steps">
       <li>Unlimited revisions until you're satisfied</li>
-      <li>Premium WordPress theme and plugins</li>
-      <li>Fully responsive and retina-ready design</li>
-      <li>Built-in SEO tools (Yoast SEO)</li>
+      <li>Fully responsive and modern design</li>
+      <li>Built-in search engine optimization tools (Yoast SEO)</li>
       <li>Security plugin for peace of mind</li>
       <li>Mobile- and tablet-friendly (Google test approved)</li>
-      <li>100% satisfaction guarantee — or your money back</li>
     </ul>
 
-    <h3>What We’ll Need From You</h3>
+    <h3>What We’ll Generally Need to Know</h3>
     <ul class="essentials">
       <li>A short introduction to your business or project</li>
-      <li>Your slogan (if applicable)</li>
-      <li>Your logo</li>
+      <li>Your slogan (if you've got one)</li>
+      <li>Your logo (any format is fine, we can convert)</li>
       <li>Any images you'd like to include (if not, we’ll find quality alternatives)</li>
-      <li>A list of pages and the content for each</li>
-      <li>Access to your domain and hosting account</li>
+      <li>A list of pages (think of them like sections of your website) and the content for each</li>
+      <li>Access to your domain and hosting account (we can help set this up if you need)</li>
       <li>Example websites you love</li>
       <li>Preferred colors and fonts (if any)</li>
       <li>Your collaboration and feedback during development</li>
