--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="relative">
-          <img src="Screenshot 2025-09-07 224647.png" alt="Portfolio example" class="rounded-xl shadow-xl" />
+          <img src="hvac-site.jpg?v=1" alt="Portfolio example" class="rounded-xl shadow-xl" loading="lazy" />
         </div>
       </div>
     </div>
@@ -90,7 +90,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl font-bold tracking-tight mb-6">My Work</h2>
       <article class="group rounded-2xl border border-gray-200 overflow-hidden hover:shadow-lg transition bg-white max-w-xl">
-        <img src="Screenshot 2025-09-07 224647.png" alt="Central Heating and Air website" class="w-full" />
+        <img src="hvac-site.jpg?v=1" alt="Central Heating and Air website" class="w-full" loading="lazy" />
         <div class="p-5">
           <h3 class="font-semibold">Central Heating & Air Website</h3>
           <p class="mt-1 text-sm text-gray-600">Redesigned for clarity, responsiveness, and professional branding.</p>
