--- a/index.html
+++ b/index.html
@@ -79,7 +79,24 @@
           </div>
         </div>
         <div class="relative">
-          <img src="hvac-site.jpg?v=1" alt="Portfolio example" class="rounded-xl shadow-xl" loading="lazy" />
+          <div class="grid sm:grid-cols-2 gap-4">
+            <div class="rounded-2xl border border-gray-200 bg-white/80 backdrop-blur p-5">
+              <div class="text-3xl font-extrabold text-brand-700">95+</div>
+              <p class="text-sm text-gray-600">Lighthouse Performance on recent builds</p>
+            </div>
+            <div class="rounded-2xl border border-gray-200 bg-white/80 backdrop-blur p-5">
+              <div class="text-3xl font-extrabold text-brand-700">1–2 wks</div>
+              <p class="text-sm text-gray-600">Typical delivery for Starter sites</p>
+            </div>
+            <div class="rounded-2xl border border-gray-200 bg-white/80 backdrop-blur p-5">
+              <div class="text-3xl font-extrabold text-brand-700">Mobile‑first</div>
+              <p class="text-sm text-gray-600">Built for speed & SEO</p>
+            </div>
+            <div class="rounded-2xl border border-gray-200 bg-white/80 backdrop-blur p-5">
+              <div class="text-3xl font-extrabold text-brand-700">Flat $500</div>
+              <p class="text-sm text-gray-600">Most popular Starter plan</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
