--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <article class="group rounded-2xl border border-gray-200 overflow-hidden hover:shadow-lg transition bg-white max-w-xl">
         <img src="hvac-site.jpg?v=1" alt="Central Heating and Air website" class="w-full" loading="lazy" />
         <div class="p-5">
-          <h3 class="font-semibold">Central Heating & Air Website</h3>
+          <h3 class="font-semibold"><a href=\"https://central-hac.com\" target=\"_blank\" rel=\"noopener noreferrer\">Central Heating & Air Website</a></h3>
           <p class="mt-1 text-sm text-gray-600">Redesigned for clarity, responsiveness, and professional branding.</p>
         </div>
       </article>
